--- a/emp_app/templates/add_emp.html
+++ b/emp_app/templates/add_emp.html
@@ -11,16 +11,8 @@
 </head>
 
 <body>
-    <div class="container mt-4" style="text-align: center;">
-        <h1>Employee Management System</h1>
-        <hr>
-        <div class="d-flex justify-content-between my-4">
-            <a class="btn btn-primary" href="view_all/" role="button">View All Employees</a>
-            <a class="btn btn-primary" href="add_emp/" role="button">Add an Employee</a>
-            <a class="btn btn-primary" href="rem_emp/" role="button">Remove an Employee</a>
-            <a class="btn btn-primary" href="filter_emp/" role="button">Filter Employee List</a>
-        </div>
-
+    <div class="container" style="text-align: center;">
+        <h1>add</h1>
     </div>
 
 
