View all employee details complete

--- a/emp_app/templates/index.html
+++ b/emp_app/templates/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container mt-4" style="text-align: center;">
-        <h1>Employee Management System</h1>
+        <h1 class="fw-bold">Employee Management System</h1>
         <hr>
         <div class="d-flex justify-content-between my-4">
             <a class="btn btn-primary" href="view_all/" role="button">View All Employees</a>
