--- a/emp_app/templates/add_emp.html
+++ b/emp_app/templates/add_emp.html
@@ -7,15 +7,55 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Add an Employee</title>
 </head>
 
 <body>
     <div class="container" style="text-align: center;">
-        <h1>add</h1>
+        <h1 class="fw-bold">Add an Employee</h1>
+        <hr>
+        <form method="post" action="/add_emp/">
+            {% csrf_token %}
+            <div class="mb-3">
+                <label for="first_name" class="form-label">First Name</label>
+                <input type="text" class="form-control" id="first_name" name="first_name">
+            </div>
+            <div class="mb-3">
+                <label for="last_name" class="form-label">Last Name</label>
+                <input type="text" class="form-control" id="last_name" name="last_name">
+            </div>
+            <div class="mb-3">
+                <label for="dept" class="form-label">Department</label>
+                <input type="number" class="form-control" id="dept" name="dept">
+            </div>
+            <div class="mb-3">
+                <label for="salary" class="form-label">Salary</label>
+                <input type="number" class="form-control" id="salary" name="salary">
+            </div>
+            <div class="mb-3">
+                <label for="bonus" class="form-label">Bonus</label>
+                <input type="number" class="form-control" id="bonus" name="bonus">
+            </div>
+            <div class="mb-3">
+                <label for="role" class="form-label">Role</label>
+                <input type="number" class="form-control" id="role" name="role">
+            </div>
+            <div class="mb-3">
+                <label for="phone" class="form-label">Phone Number</label>
+                <input type="number" class="form-control" id="phone" name="phone">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
     </div>
 
-
+    <!-- <script type="text/javascript">
+        $(function () {
+            {% if alert %}
+            //whatever conditions and js code
+            alert('{{alert}}');
+            {% endif %}
+        });
+    </script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
