--- a/emp_app/templates/remove_emp.html
+++ b/emp_app/templates/remove_emp.html
@@ -7,12 +7,46 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Remove an Employee</title>
 </head>
 
 <body>
     <div class="container" style="text-align: center;">
-        <h1>remove</h1>
+        <h1 class="fw-bold my-4">Remove an Employee</h1>
+        <hr>
+        <table class="table table-striped my-4">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">First Name</th>
+                    <th scope="col">Last Name</th>
+                    <th scope="col">Department</th>
+                    <th scope="col">Salary</th>
+                    <th scope="col">Bonus</th>
+                    <th scope="col">Role</th>
+                    <th scope="col">Phone</th>
+                    <th scope="col">Hiring Date</th>
+                    <th scope="col">Remove</th>
+                </tr>
+            </thead>
+            {% for emp in emps %}
+            <tbody>
+                <tr>
+                    <th scope="row">{{emp.id}}</th>
+                    <td>{{emp.first_name}}</td>
+                    <td>{{emp.last_name}}</td>
+                    <td>{{emp.dept.name}}</td>
+                    <td>{{emp.salary}}</td>
+                    <td>{{emp.bonus}}</td>
+                    <td>{{emp.role.name}}</td>
+                    <td>{{emp.phone}}</td>
+                    <td>{{emp.hire_date}}</td>
+                    <td><a href="/rem_emp/{{emp.id}}"><button type="button" class="btn btn-danger">Delete</button></a>
+                    </td>
+                </tr>
+            </tbody>
+            {% endfor %}
+        </table>
     </div>
 
 
