--- a/emp_app/templates/filter_emp.html
+++ b/emp_app/templates/filter_emp.html
@@ -7,12 +7,61 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Filter Employees</title>
 </head>
 
 <body>
     <div class="container" style="text-align: center;">
-        <h1>filter</h1>
+        <h1 class="fw-bold my-4">Filter Employees</h1>
+        <hr>
+        <form method="post" action="/filter_emp/">
+            {% csrf_token %}
+
+            <label for="name">Name</label><br>
+            <input type="text" id="name" name="name"><br>
+
+            <label for="dept">Department</label><br>
+            <input type="text" id="dept" name="dept"><br>
+
+            <label for="role">Role</label><br>
+            <input type="text" id="role" name="role"><br>
+            <hr>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        <hr>
+        {% if emps %}
+        <h1>Results</h1>
+        <table class="table table-striped my-4">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">First Name</th>
+                    <th scope="col">Last Name</th>
+                    <th scope="col">Department</th>
+                    <th scope="col">Salary</th>
+                    <th scope="col">Bonus</th>
+                    <th scope="col">Role</th>
+                    <th scope="col">Phone</th>
+                    <th scope="col">Hiring Date</th>
+                </tr>
+            </thead>
+            {% for emp in emps %}
+            <tbody>
+                <tr>
+                    <th scope="row">{{emp.id}}</th>
+                    <td>{{emp.first_name}}</td>
+                    <td>{{emp.last_name}}</td>
+                    <td>{{emp.dept.name}}</td>
+                    <td>{{emp.salary}}</td>
+                    <td>{{emp.bonus}}</td>
+                    <td>{{emp.role.name}}</td>
+                    <td>{{emp.phone}}</td>
+                    <td>{{emp.hire_date}}</td>
+                </tr>
+            </tbody>
+            {% endfor %}
+        </table>
+        {% endif %}
     </div>
 
 
